# mmfutils

./: .coveragerc  .flake8  .gitignore  .gitlab-ci.yml  .hgignore  .hgrc  .hgtags  .init-file.bash  .init-file.micromamba.bash  .init-file.pixi.bash  .readthedocs.yml  DevNotes.md  Makefile  Notes.html  Notes.md  README.rst  anaconda-project.yaml  commit_log.txt  environment.test.yaml  environment.yaml  environment.yml  meta.yaml  myst.yml  noxfile.py  pyproject.toml  pytest.ini  setup.py
.github/: apt-packages.txt
.github/workflows/: python_3.10.yaml  python_3.11.yaml  python_3.12.yaml  python_3.13.yaml  python_3.14.yaml  python_3.9.yaml  tests.yaml  tests.yml  tests_micromamba.yaml
Docs/: Animation.md  DVR Basis.md  DVR Basis.py  Performance.md  Performance.py  Plotting.md  README.ipynb  README.md  README.rst  Wigner Ville.md  Wigner Ville.py
Docs/Notes/: Optimization.md  Uncertainties.md  Uncertainties.py  optimization_notes.md
Docs/source/: conf.py  index.rst  mmfutils.contexts.rst  mmfutils.interface.rst
doc/: Animation.py  DVR Basis.py  Performance.py  Plotting.md  README.ipynb  README.md  README.py  README.rst  Wigner Ville.py
doc/Notes/: Optimization.py  optimization_notes.py
doc/source/: conf.py
misc/: PlotSleepBehavior.py  testfftw.py
mmfutils/: __init__.py
mmfutils/plot/: animation.py
performance/: Notes.md  docopt.py  test1.py  test2.py  test_mmfutils_fftw.py  testfftw.py  utils.py
performance/fftw/: docopt.py  test_threadwisdom.py  testfftw.py
src/mmfutils/: __init__.py  contexts.py  debugging.py  runmd.py
src/mmfutils/math/: special.py
src/mmfutils/math/bases/: bases.py  interfaces.py  utils.py
src/mmfutils/math/bases/tests/: test_bases.py
src/mmfutils/performance/: __init__.py  fft.py
src/mmfutils/plot/: __init__.py
tests/: conftest.py  test_bases.py  test_contexts.py  test_debugging.py  test_parallel.py  test_performance_fft.py  test_plot.py  test_runmd.py
