[project]
name = "mmfutils"
version = "0.7.6.dev0"
description = "Small set of utilities: containers and interfaces."
license = {text = "BSD-3-Clause"}
authors = [
  {name = "Michael McNeil Forbes", email = "michael.forbes+python@gmail.com>"},
]
readme = "description.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.9,<3.15"
dependencies = [
  'zope.interface >= 5.5.2',
  'husl >= 4.0.3',
  'importlib-metadata >= 4.13.0; python_version < "3.8"',
  "uncertainties >= 3.2.2",
]

[project.urls]
documentation = "http://mmfutils.readthedocs.org/"
source = "https://gitlab.com/ColdAtoms/utilities/mmfutils"
issues = "https://gitlab.com/coldatoms/utilities/mmfutils/-/issues"


# Optional dependencies for testing, building the docs, etc.
[project.optional-dependencies]
test = [
    'pytest >= 7.2.2',
    'pytest-cov >= 4.0.0',
    'pytest-xdist >= 3.2.1',
    'mmf-setup >= 0.4.6',
    'mock >= 4.0.3',
    "persist >= 3.2.1",
    'psutil >= 5.9.4',
    'pytest-rerunfailures >= 11.1.2',
    'mmfutils[full,doc]',
]

doc = [
  'nbconvert >=7.2.7',
  'docutils >= 0.18.1',
  'mock >= 4.0.3',
  #docutils' >=0.20.1',
  # 'sphinx < 5.0.0'
  'sphinx >= 7.1.2; python_version < "3.9"',
  'sphinx >= 7.2.6; python_version >= "3.9"',
  'sphinx-rtd-theme >= 1.2.1',
  'sphinxcontrib-zopeext >= 0.4.3',
  'matplotlib >= 3.5.3', #; python_version < "3.11"',
]

parallel = [
    'ipyparallel >= 8.4.1',
]

pyfftw = [
  "pyfftw>=0.14.0",
  # On my Mac OS ARM, I need to install from source for performance.
  # TODO: Not sure how to specify this on PyPI.
  #'pyFFTW >= 0.13.0; python_version <"3.8"',
  #"pyfftw>=0.14.0 ; sys_platform != 'darwin' or platform_machine != 'arm64'",
  #"pyFFTW @ git+https://github.com/pyFFTW/pyFFTW.git#egg=master ; python_version > '3.8' and sys_platform == 'darwin' and platform_machine == 'arm64'",
]

numba = [
  "numba >= 0.56.4; python_version < '3.8'",
  "numba >= 0.60.0; python_version >= '3.8' and python_version < '3.13'",
  "numba >= 0.61.0rc1; python_version >= '3.13'", 
]

perf = [
  'numexpr >= 2.8.1',
  "Cython>=3.0.11",
  'mmfutils[pyfftw,numba,parallel]',
]

# Support for jupyter notebooks with extensions.
notebook = [
    'black >= 23.12.1',
    'notebook < 7',
    'jupytext >= 1.16.1',
    'RISE >= 5.7.1',
    'jupyter-contrib-nbextensions >= 0.7.0',
    'nbclassic >= 1.0.0',
    'jupyter-console>=6.6.3',
    'jupyter-server<2',  # https://github.com/jupyter/notebook/issues/6702
    'ipywidgets>=8.1.5',
    'tqdm',
]

full = [
    "scipy >= 1.7.3; python_version < '3.8'",
    "scipy >= 1.10.1; python_version >= '3.8' and python_version < '3.9'",
    "scipy >= 1.13.1; python_version >= '3.9' and python_version < '3.10'",
    "scipy >= 1.14.1; python_version >= '3.10'",
    'matplotlib >= 3.5.3', #; python_version < "3.11"',
    'docutils >= 0.19',
    'mmfutils[perf]',
]

all = [
    "mmfutils[full,test,doc,notebook]",
]

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "ipython >= 7.34.0",
    "nbconvert >= 7.2.7",
    "pandoc >= 2.3",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

######################################################################
# PyTest
[tool.pytest.ini_options]
# Note: see the discussion in https://github.com/pytest-dev/pytest/issues/2042
# If your doctests are installed, then you should provide the module here (mmfutils)
# and add --pyargs to the options below.  Otherwise, you will get ImportMismatchError
# for the doctests.
testpaths = [ "mmfutils", "tests" ]
#testpaths = [ "src/mmfutils", "tests" ]
markers = [
    # mark test as a benchmark.  (Might be slow, or platform dependent)
    "bench",
    # mark test as slow.
    "slow",
]
addopts = [
    "--pyargs",
    "-m not bench",
    "--doctest-modules",
    "--cov",
    "--cov-report=html",
    "--cov-fail-under=80",
    "--no-cov-on-fail",
    "--cov-append",
    #"--reruns 3",
    #"-x",
    #"--pdb",
    #"--flake8",  # Disable until https://github.com/tholo/pytest-flake8/issues/8
]

doctest_optionflags = [
    "ELLIPSIS",
    "NORMALIZE_WHITESPACE"
    ]

[tool.coverage.run]
relative_files = true  # Remove the .nox/test-3-10 etc. prefix.
#parallel = true        # Needed to generate .coverage.* files for each process
source = ["mmfutils"]  # This the installed package.
omit = ["*/tests/*"]   # Don't cover tests.

[tool.coverage.html]
directory = "build/_coverage"

######################################################################
# Black
[tool.black]
exclude = '''
    /(
        \.git
      | \.hg
      | \.nox
      | \.venv
      | _build
      | build
      | dist
    )/
'''

######################################################################
# Pixi: This is a tool to provision enviroments.  It is not required
# for using the package, but very useful for developing and testing.

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", "osx-64"]

# This ensure that the current package is installed in editable format.
[tool.pixi.pypi-dependencies]
mmfutils = { path = ".", editable = true }

[tool.pixi.feature.doc.dependencies]
mystmd = ">=1.8.1,<2"

# This seems very redundant, but I don't know of another way unless we generated
# it programatically.  See
# https://github.com/prefix-dev/pixi/discussions/5576
[tool.pixi.feature.py39.dependencies]
python = "~=3.9.0"
[tool.pixi.feature.py310.dependencies]
python = "~=3.10.0"
[tool.pixi.feature.py311.dependencies]
python = "~=3.11.0"
[tool.pixi.feature.py312.dependencies]
python = "~=3.12.0"
[tool.pixi.feature.py313.dependencies]
python = "~=3.13.0"
[tool.pixi.feature.py314.dependencies]
python = "~=3.14.0"

[tool.pixi.environments]
default = { features = ["all"], solve-group = "default" }
doc = { features = ["doc"], solve-group = "default" }
test = { features = ["test"], solve-group = "default" }

py39 = ["py39", "all"]
py310 = ["py310", "all"]
py311 = ["py311", "all"]
py312 = ["py312", "all"]
py313 = ["py313", "all"]
py314 = ["py314", "all"]

test39 = ["test", "py39"]
test310 = ["test", "py310"]
test311 = ["test", "py311"]
test312 = ["test", "py312"]
test313 = ["test", "py313"]
test314 = ["test", "py314"]
